; ModuleID = '/home/carl/AnghaBench/freebsd/sys/netgraph/atm/sscop/extr_ng_sscop.c_flow_lower.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/netgraph/atm/sscop/extr_ng_sscop.c_flow_lower.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ng_mesg = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32 }
%struct.priv = type { i32 }

@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, %struct.ng_mesg*)* @flow_lower to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @flow_lower(i32 %0, %struct.ng_mesg* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.ng_mesg*, align 8
  %6 = alloca %struct.priv*, align 8
  store i32 %0, i32* %4, align 4
  store %struct.ng_mesg* %1, %struct.ng_mesg** %5, align 8
  %7 = load i32, i32* %4, align 4
  %8 = call %struct.priv* @NG_NODE_PRIVATE(i32 %7)
  store %struct.priv* %8, %struct.priv** %6, align 8
  %9 = load %struct.ng_mesg*, %struct.ng_mesg** %5, align 8
  %10 = getelementptr inbounds %struct.ng_mesg, %struct.ng_mesg* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = sext i32 %12 to i64
  %14 = icmp ne i64 %13, 4
  br i1 %14, label %15, label %17

15:                                               ; preds = %2
  %16 = load i32, i32* @EINVAL, align 4
  store i32 %16, i32* %3, align 4
  br label %35

17:                                               ; preds = %2
  %18 = load %struct.ng_mesg*, %struct.ng_mesg** %5, align 8
  %19 = getelementptr inbounds %struct.ng_mesg, %struct.ng_mesg* %18, i32 0, i32 0
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  switch i32 %21, label %32 [
    i32 129, label %22
    i32 128, label %27
  ]

22:                                               ; preds = %17
  %23 = load %struct.priv*, %struct.priv** %6, align 8
  %24 = getelementptr inbounds %struct.priv, %struct.priv* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = call i32 @sscop_setbusy(i32 %25, i32 1)
  br label %34

27:                                               ; preds = %17
  %28 = load %struct.priv*, %struct.priv** %6, align 8
  %29 = getelementptr inbounds %struct.priv, %struct.priv* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = call i32 @sscop_setbusy(i32 %30, i32 1)
  br label %34

32:                                               ; preds = %17
  %33 = load i32, i32* @EINVAL, align 4
  store i32 %33, i32* %3, align 4
  br label %35

34:                                               ; preds = %27, %22
  store i32 0, i32* %3, align 4
  br label %35

35:                                               ; preds = %34, %32, %15
  %36 = load i32, i32* %3, align 4
  ret i32 %36
}

declare dso_local %struct.priv* @NG_NODE_PRIVATE(i32) #1

declare dso_local i32 @sscop_setbusy(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
